Allow wildcard CORS origin patterns